adicionando scripts vagrant

--- a/app/Makefile
+++ b/app/Makefile
@@ -3,9 +3,12 @@ FLASK_APP_DOCKER=app
 DOCKER_IMAGE_VERSION=1.0
 DOCKER_HOST_PORT=8000
 DOCKER_INTERNAL_PORT=8000
-DOCKERHUB_REPOSITORY=samuel1797/desafio-devops:tagname
-
-
+DOCKER_REGISTRY=docker.io
+DOCKER_REGISTRY_LOGIN=samuel1797
+DOCKER_REGISTRY_TOKEN=dckr_pat_R01sLxft7IH1p-1i33bvrcUAW1I
+DOCKER_REGISTRY_PASSWORD=
+DOCKER_REGISTRY_REPOSITORY=samuel1797/desafio-devops
+DOCKER_REGISTRY_REPOSITORY_TAG=1.0
 all: run
 .PHONY: all build run clean
 
@@ -43,3 +46,41 @@ clean:
 	@echo
 	docker image ls
 	@echo
+
+
+
+clean:
+	@echo
+	@echo "******************** KILLING CONTAINER **********************************"
+	docker rm -f ${CONTAINER_NAME}
+	@echo
+	docker ps
+	@echo
+	@echo
+	@echo "******************** REMOVING DOCKER IMAGE **********************************"
+	docker image rm -f ${FLASK_APP_DOCKER}:${DOCKER_IMAGE_VERSION}
+	@echo
+	docker image ls
+	@echo
+
+publish:
+	@echo
+	@echo "******************** BUILDING & TAGGING DOCKER IMAGE **********************************"
+	docker build -t ${DOCKER_REGISTRY_REPOSITORY}:${DOCKER_REGISTRY_REPOSITORY_TAG} .
+	@echo
+	docker image ls
+	@echo
+	docker login -u ${DOCKER_REGISTRY_LOGIN} -p ${DOCKER_REGISTRY_TOKEN} ${DOCKER_REGISTRY}
+	@echo
+	@echo "******************** PUSHING IMAGE TO THE DOCKERHUB **********************************"
+	docker push ${DOCKER_REGISTRY_REPOSITORY}:${DOCKER_REGISTRY_REPOSITORY_TAG}
+	@echo
+	@echo "******************** BUILDING & TAGGING DOCKER IMAGE AS LATEST **********************************"
+	docker build -t ${DOCKER_REGISTRY_REPOSITORY}:latest .
+	@echo
+	docker image ls
+	@echo
+	docker login -u ${DOCKER_REGISTRY_LOGIN} -p ${DOCKER_REGISTRY_TOKEN} ${DOCKER_REGISTRY}
+	@echo
+	@echo "******************** PUSHING LATEST IMAGE TO THE DOCKERHUB **********************************"
+	docker push ${DOCKER_REGISTRY_REPOSITORY}:latest
