--- a/local_infra/Vagrantfile
+++ b/local_infra/Vagrantfile
@@ -5,10 +5,7 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
 
-  # Disable automatic box update checking. If you disable this, then
-  # boxes will only be checked for updates when the user runs
-  # `vagrant box outdated`. This is not recommended.
-  # config.vm.box_check_update = false
+  config.vm.provision "file", source: "./k8s", destination: "/home/vagrant/k8s"
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
@@ -21,9 +18,8 @@ Vagrant.configure("2") do |config|
   # via 127.0.0.1 to disable public access
   # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
 
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  # config.vm.network "private_network", ip: "192.168.33.10"
+  # Create a private network, which allows host-only access to the machine using a specific IP.
+  config.vm.network "private_network", ip: "192.168.56.10"
 
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
@@ -43,5 +39,23 @@ Vagrant.configure("2") do |config|
   config.vm.provision "shell", inline: <<-SHELL
     apt-get update
     apt-get upgrade -y
+
+    snap install microk8s --classic --channel=1.27    
+    microk8s status --wait-ready
+
+
+    mkdir -p ~/.kube
+    usermod -a -G microk8s vagrant
+    chown -f -R vagrant ~/.kube
+
+    microk8s kubectl apply -f /home/vagrant/k8s/flask-app-k8s.yaml
+    microk8s.kubectl wait --for=condition=available deployment/flask-app-deployment
+    sleep 20
+    microk8s kubectl get service -A
+    microk8s kubectl get deployment -A
+    export NODE_PORT="$(microk8s kubectl get services/flask-app-service -o go-template='{{(index .spec.ports 0).nodePort}}')"
+    echo "NODE_PORT=${NODE_PORT}"
+    curl -sv localhost:${NODE_PORT}/api/comment/list/1
+    
   SHELL
 end
