--- a/app/Makefile
+++ b/app/Makefile
@@ -1,12 +1,11 @@
+include .env
+
 CONTAINER_NAME=flask_app
 FLASK_APP_DOCKER=app
 DOCKER_IMAGE_VERSION=1.0
 DOCKER_HOST_PORT=8000
 DOCKER_INTERNAL_PORT=8000
 DOCKER_REGISTRY=docker.io
-DOCKER_REGISTRY_LOGIN=samuel1797
-DOCKER_REGISTRY_TOKEN=dckr_pat_R01sLxft7IH1p-1i33bvrcUAW1I
-DOCKER_REGISTRY_PASSWORD=
 DOCKER_REGISTRY_REPOSITORY=samuel1797/desafio-devops
 DOCKER_REGISTRY_REPOSITORY_TAG=1.0
 all: run
