--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,6 +31,7 @@ jobs:
       - name: Build and push using a specific tag version
         uses: docker/build-push-action@v5
         with:
+          context: ./app
           push: true
           tags: samuel1797/desafio-devops:1.0
 
@@ -38,5 +39,6 @@ jobs:
       - name: Build and push using the latest tag version
         uses: docker/build-push-action@v5
         with:
+          context: ./app
           push: true
           tags: samuel1797/desafio-devops:latest
