--- a/local_infra/Vagrantfile
+++ b/local_infra/Vagrantfile
@@ -6,6 +6,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
 
   config.vm.provision "file", source: "./k8s", destination: "/home/vagrant/k8s"
+  config.vm.provision "file", source: "./kong", destination: "/home/vagrant/kong"
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
@@ -16,7 +17,7 @@ Vagrant.configure("2") do |config|
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine and only allow access
   # via 127.0.0.1 to disable public access
-  # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+  config.vm.network "forwarded_port", guest: 8001, host: 8001, host_ip: "127.0.0.1"
 
   # Create a private network, which allows host-only access to the machine using a specific IP.
   config.vm.network "private_network", ip: "192.168.56.10"
@@ -40,6 +41,7 @@ Vagrant.configure("2") do |config|
     apt-get update
     apt-get upgrade -y
 
+    echo "Installing MicroK8s (version 1.27)"
     snap install microk8s --classic --channel=1.27    
     microk8s status --wait-ready
 
@@ -47,7 +49,7 @@ Vagrant.configure("2") do |config|
     usermod -a -G microk8s vagrant
     chown -f -R vagrant ~/.kube
 
-
+    echo "Deploying Flask App into the MicroK8s"
     microk8s kubectl create namespace app
     microk8s kubectl apply -f /home/vagrant/k8s/flask-app-k8s.yaml --namespace app
     microk8s.kubectl wait --for=condition=available deployment/flask-app-deployment --namespace app --timeout=300s
@@ -55,10 +57,26 @@ Vagrant.configure("2") do |config|
     microk8s kubectl get service --namespace app
     microk8s kubectl get deployment --namespace app
 
-    microk8s enable dashboard metrics-server observability
+    echo "Installing MicroK8s addons/plugins"
+    microk8s enable dns 
+    microk8s enable storage
+    microk8s enable ingress
+    microk8s enable metrics-server
+    microk8s enable observability
+    microk8s enable dashboard
     
+    microk8s helm repo add kong https://charts.konghq.com
+    microk8s helm repo update
+    microk8s helm install kong kong/kong --namespace kong-api-gateway --create-namespace -f /home/vagrant/kong/values.yaml
+
     export NODE_PORT="$(microk8s kubectl get services/flask-app-service --namespace app -o go-template='{{(index .spec.ports 0).nodePort}}')"
     echo "NODE_PORT=${NODE_PORT}"
     curl -sv localhost:${NODE_PORT}/api/comment/list/1
+    
+    microk8s kubectl --namespace kube-system patch svc kubernetes-dashboard -p '{"spec": {"type": "NodePort", "ports": [{"nodePort": 32000, "port": 443, "protocol": "TCP", "targetPort": 8443}]}}'
+    microk8s kubectl --namespace observability patch svc kube-prom-stack-kube-prome-prometheus -p '{"spec": {"type": "NodePort", "ports": [{"nodePort": 32001, "port": 9090, "protocol": "TCP", "targetPort": 9090}]}}'
+    microk8s kubectl --namespace observability patch svc kube-prom-stack-grafana -p '{"spec": {"type": "NodePort", "ports": [{"nodePort": 32002, "port": 80, "protocol": "TCP", "targetPort": 3000}]}}'
+
+
   SHELL
 end
