--- a/local_infra/Vagrantfile
+++ b/local_infra/Vagrantfile
@@ -7,6 +7,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "file", source: "./k8s", destination: "/home/vagrant/k8s"
   config.vm.provision "file", source: "./kong", destination: "/home/vagrant/kong"
+  config.vm.provision "file", source: "./ansible", destination: "/home/vagrant/ansible"
 
   # Create a forwarded port mapping which allows access to a specific port
   # within the machine from a port on the host machine. In the example below,
@@ -38,6 +39,10 @@ Vagrant.configure("2") do |config|
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
   config.vm.provision "shell", inline: <<-SHELL
+    echo ""
+    echo "************** Running Ansible script"
+    ansible-playbook -i /home/vagrant/ansible/inventory/localhost/hosts.yaml  /home/vagrant/ansible/playbooks/main.yaml
+
     echo ""
     echo "************** Updating Linux Packages"
     apt-get update
