--- a/local_infra/ansible/playbooks/setup.yaml
+++ b/local_infra/ansible/playbooks/setup.yaml
@@ -77,6 +77,8 @@
     
     - name: Enable add-ons
       command: microk8s enable dns storage rbac 
+      become: true
+
       
     - name: Instal Metallb
       command: microk8s enable metallb:{{ metallb_ip_range }}
