--- a/.github/workflows/cd_app.yaml
+++ b/.github/workflows/cd_app.yaml
@@ -4,41 +4,44 @@ name: Continuous delivery and deploy into [NOT DEFINED] Cloud provider
 # ou de forma manual
 on:
   push:
-    branches: [ main ]
+    branches: [main]
+    paths:
+    - "app/"
   pull_request:
-    branches: [ main ]
+    branches: [main]
+    paths:
+    - "app/"
   workflow_dispatch:
-    
+
 jobs:
   build-test:
-    # Sistema operacional para qual será criada a build
     runs-on: ubuntu-latest
-      
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      # Build container images for different platforms from a single build context
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    # Build container images for different platforms from a single build context
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push using a specific tag version
-        uses: docker/build-push-action@v5
-        with:
-          context: ./app
-          push: true
-          tags: samuel1797/desafio-devops:1.0
+    - name: Build and push using a specific tag version
+      uses: docker/build-push-action@v5
+      with:
+        context: ./app
+        push: true
+        tags: samuel1797/desafio-devops:1.0
 
-      
-      - name: Build and push using the latest tag version
-        uses: docker/build-push-action@v5
-        with:
-          context: ./app
-          push: true
-          tags: samuel1797/desafio-devops:latest
+
+    - name: Build and push using the latest tag version
+      uses: docker/build-push-action@v5
+      with:
+        context: ./app
+        push: true
+        tags: samuel1797/desafio-devops:latest
