--- a/.github/workflows/cd_app.yaml
+++ b/.github/workflows/cd_app.yaml
@@ -6,11 +6,11 @@ on:
   push:
     branches: [main]
     paths:
-    - "app/"
+    - "app/**"
   pull_request:
     branches: [main]
     paths:
-    - "app/"
+    - "app/**"
   workflow_dispatch:
 
 jobs:
