--- a/.github/workflows/cd_app.yaml
+++ b/.github/workflows/cd_app.yaml
@@ -5,13 +5,13 @@ name: Continuous delivery and deploy into AWS Cloud provider
 on:
   push:
     branches: [main, develop]
-    paths:
-    - "app/**"
+    # paths:
+    # - "app/**"
   pull_request:
     branches: [main, develop]
-    paths:
-    - "app/**"
-  workflow_dispatch:
+    # paths:
+    # - "app/**"
+  # workflow_dispatch:
 
 jobs:
   continuous-delivery:
