alterações no github actions script with the terraform commands

--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -8,6 +8,10 @@ jobs:
   provisioning:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: cloud_infra/terraform
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
