--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -15,6 +15,12 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+    
+    - name: Configure Public SSH key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa.pub
+        chmod 600 ~/.ssh/id_rsa.pub
 
     - uses: hashicorp/setup-terraform@v3
       with:
