--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -22,6 +22,14 @@ jobs:
         echo "${{ secrets.SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa.pub
         chmod 600 ~/.ssh/id_rsa.pub
 
+    - name: Configure AWS credentials
+      run: |
+        mkdir -p ~/.aws
+        echo '[default]' > ~/.aws/credentials
+        echo 'aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}' > ~/.aws/credentials
+        echo 'aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}' > ~/.aws/credentials
+        chmod 600 ~/.aws/credentials
+
     - uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: "1.7.5"
