--- a/.github/workflows/iac.yaml
+++ b/.github/workflows/iac.yaml
@@ -26,8 +26,8 @@ jobs:
       run: |
         mkdir -p ~/.aws
         echo '[default]' > ~/.aws/credentials
-        echo 'aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}' > ~/.aws/credentials
-        echo 'aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}' > ~/.aws/credentials
+        echo 'aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}' >> ~/.aws/credentials
+        echo 'aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}' >> ~/.aws/credentials
         chmod 600 ~/.aws/credentials
 
     - uses: hashicorp/setup-terraform@v3
