atualização na descrição do script e em documentação

--- a/.github/workflows/iac_deprovisioning.yaml
+++ b/.github/workflows/iac_deprovisioning.yaml
@@ -1,4 +1,4 @@
-name: Manual Deprovisioning into AWS
+name: Deprovisioning of the AWS infraestructure
 
 #  Será executada as atividade abaixo de forma manual
 on:
