--- a/.github/workflows/cd_app.yaml
+++ b/.github/workflows/cd_app.yaml
@@ -1,5 +1,4 @@
-name: Continuous delivery and deploy into AWS Cloud provider
-
+name: Continuous delivery of the Flask app
 #  Será executada as atividade abaixo sempre que foi submetido um push ou pull request a branch master
 # ou de forma manual
 on:
