--- a/.github/workflows/iac_provisoning.yaml
+++ b/.github/workflows/iac_provisoning.yaml
@@ -1,4 +1,4 @@
-name: Manual Provisioning into AWS
+name: Provisioning of the AWS infraestructure
 
 #  Será executada as atividade abaixo de forma manual
 on:
