usando s3 e dynamodb no terraform

--- a/cloud_infra/terraform/Makefile
+++ b/cloud_infra/terraform/Makefile
@@ -1,8 +1,9 @@
+include .env
+
 all: preparation
 .PHONY: all preparation run
-
 	
-preparation: clean
+preparation: 
 	@echo
 	@echo "******************** PREPARING TERRAFORM ENVIRONMENT **********************************"
 	terraform init
@@ -16,7 +17,7 @@ preparation: clean
 run: preparation	 
 	@echo
 	@echo "******************** APPLYING THE CLOUD INFRAESTRUCTURE PLAN **********************************"
-	terraform apply
+	terraform apply "tfplan"
 	@echo
 
 
