--- a/local_infra/Vagrantfile
+++ b/local_infra/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/focal64"
 
   config.vm.provision "file", source: "./k8s", destination: "/home/vagrant/k8s"
-  config.vm.provision "file", source: "./kong", destination: "/home/vagrant/kong"
+  # config.vm.provision "file", source: "./kong", destination: "/home/vagrant/kong"
   config.vm.provision "file", source: "./ansible", destination: "/home/vagrant/ansible"
 
   config.vm.network "private_network", ip: "192.168.56.10"
@@ -17,7 +17,7 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.provision "ansible" do |ansible|
-    ansible.playbook = "ansible/playbooks/setup.yaml"
+    ansible.playbook = "ansible/playbook.yaml"
     # ansible.verbose = "v"
     ansible.inventory_path = "ansible/inventory/hosts.yaml"
     ansible.limit = "localhost"
