--- a/local_infra/Vagrantfile
+++ b/local_infra/Vagrantfile
@@ -6,6 +6,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "file", source: "./k8s", destination: "/home/vagrant/k8s"
   # config.vm.provision "file", source: "./kong", destination: "/home/vagrant/kong"
+  config.vm.provision "file", source: "./flask-app-chart", destination: "/home/vagrant/flask-app-chart"
   config.vm.provision "file", source: "./ansible", destination: "/home/vagrant/ansible"
 
   config.vm.network "private_network", ip: "192.168.56.10"
