--- a/local_infra/flask-app-chart/templates/gateway.yaml
+++ b/local_infra/flask-app-chart/templates/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: flask-app
+  name: {{ .Values.ReleaseName }}-flask-app
   annotations:
     konghq.com/strip-path: 'true'
 spec:
@@ -13,6 +13,6 @@ spec:
         type: PathPrefix
         value: /
     backendRefs:
-    - name: flask-app
+    - name: {{ .Values.appName }}
       kind: Service
-      port: 8000
+      port: {{ .Values.containerPort }}
