--- a/local_infra/flask-app-chart/templates/service.yaml
+++ b/local_infra/flask-app-chart/templates/service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: {{ include "flask-app-chart.fullname" . }}
-  name: flask-app
+    app: {{ .Values.appName }}
+  name: {{ .Values.ReleaseName }}-flask-app
 spec:
   ports:
   - protocol: TCP
     name: http
-    port: 8000
-    targetPort: 8000
+    port: {{ .Values.containerPort }}
+    targetPort: {{ .Values.containerPort }}
   selector:
-    app: flask-app
+    app: {{ .Values.appName }}
