--- a/local_infra/flask-app-chart/templates/service.yaml
+++ b/local_infra/flask-app-chart/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   labels:
     app: {{ .Values.appName }}
-  name: {{ .Values.ReleaseName }}-flask-app
+  name: {{ .Values.appName }}-{{ .Values.ReleaseName }}
 spec:
   ports:
   - protocol: TCP
