--- a/local_infra/flask-app-chart/templates/gateway.yaml
+++ b/local_infra/flask-app-chart/templates/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: {{ .Values.ReleaseName }}-flask-app
+  name: {{ .Values.appName }}-{{ .Values.ReleaseName }}
   annotations:
     konghq.com/strip-path: 'true'
 spec:
