--- a/local_infra/flask-app-chart/values.yaml
+++ b/local_infra/flask-app-chart/values.yaml
@@ -16,7 +16,7 @@ startupProbe:
   periodSeconds: 10
 image:
   repository: samuel1797/desafio-devops
-  tag: 1.0
+  tag: "1.0"
   pullPolicy: IfNotPresent
 service:
   port: 8000
