--- a/local_infra/elk/logstash/logstash.conf
+++ b/local_infra/elk/logstash/logstash.conf
@@ -1,6 +1,6 @@
 input {
-  tcp {
-    port => 5000
+  udp {
+    port => 8000
     codec => json
   }
 }
@@ -8,7 +8,8 @@ input {
 output {
   elasticsearch {
     hosts => ["elasticsearch:9200"]
-    # index => "comments"
+    index => "comments"
   }
   stdout { codec => rubydebug }
 }
+
