adicionando configuração do keycloak

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,6 +7,8 @@ ENV POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_CREATE=1 \
     POETRY_CACHE_DIR=/tmp/poetry_cache
 
+RUN  pip install --upgrade pip && apk add -u build-base gcc musl-dev libffi-dev openssl-dev cargo
+
 COPY pyproject.toml ./
 RUN pip install poetry==1.1.12
 
@@ -19,6 +21,8 @@ FROM  python:3.9-alpine AS production
 COPY --from=builder /opt/app/.venv /opt/app/.venv
 
 ENV PATH="/opt/app/.venv/bin:$PATH"
+
+RUN apk --no-cache add musl-dev libgcc
 
 WORKDIR /opt/app
 
