--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -14,6 +14,10 @@ Jinja2 = "2.11.2"
 MarkupSafe = "1.1.1"
 Werkzeug = "1.0.1"
 logstash_formatter = "0.5.17"
+Authlib = "^1.3.0"
+pyOpenSSL = "^24.1.0"
+requests = "^2.31.0"
+Flask-WTF = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 
